--- a/style.css
+++ b/style.css
@@ -26,6 +26,13 @@ header {
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
+.sticktop {
+    position: sticky;
+    top: 0;
+    z-index: 15;
+    background-color: #fff;
+}
+
 a.logo {
     font-weight: 700;
     text-decoration: none;
